--- a/cv/cv Finance/LimDon_resumeCV_Finance.tex
+++ b/cv/cv Finance/LimDon_resumeCV_Finance.tex
@@ -121,15 +121,16 @@ Financial systems analyst with a proven record in financial systems, business an
 \textit{Senior Financial Systems Analyst, Finance and Operations} \hfill \textit{Nov 2024 --- Oct 2025} 
 % \hfill \textit{(Unofficially assisted starting Oct 2023)}
 \begin{itemize}
-\item Developed IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis, integrating first- and third-party tools (PAW, Excel, FileZilla, Cognos Command Center, Arc, Pulse, TM1py, Git) to enable daily forecasting cycles in place of biannual forecasts  
-    \item Programmatically built and maintained 42 cubes, 88 dimensions, attributes, subsets, control objects, security, applications, and views across IBM TM1/Planning Analytics development, UAT, and production environments using MDX, SQL, TurboIntegrator (TI), and TM1 rules  
+    \item Developed IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis, integrating first- and third-party tools (PAW, Excel, FileZilla, Cognos Command Center, Arc, Pulse, TM1py, Git) to enable daily forecasting cycles in place of biannual forecasts  
+    \item Programmatically built and maintained Planning Analytics OLAP database with 42 cubes, 88 dimensions, attributes, subsets, control objects, security, applications, and views across IBM TM1/Planning Analytics development, UAT, and production environments using a combination of MDX, SQL (joins, CTEs, cross applies), TurboIntegrator (TI), and TM1 rules  
     \item Developed a land cash flow module incorporating uniform, annual, and quarterly cost-to-complete spreads, retainage, and payout schedules—reducing forecast preparation time by 50\%
     \item Converted the mortgage forecast model from Excel to Planning Analytics, increasing calculation speed, granularity from business unit to project level, and integrating personnel and headcount assumptions, worked closely with the company controller; assumptions included home closings, loans funded, application and contract rates, loan expenses and fees
     \item Designed dynamic, auto-refreshing dashboards and visualizations for financial managers, the CFO, and board members, replacing SSRS reports and significantly reducing board package preparation time
-    \item Spearheaded newly implemented Git repository to manage and restore backups for processes and rules. In addition, prepared quarterly reports on change tracking and change management to support SOX and ITGC audit compliance using Git Bash scripts
-    \item Troubleshot and fixed existing Excel forecast templates, including pivot tables, VLOOKUP/XLOOKUP, dynamic array functions, and Power Query
+    \item Spearheaded newly implemented Git repository to manage and restore backups for processes and rules. In addition, prepared quarterly internal audit reports on change tracking and change management to support SOX and ITGC audit compliance using Git Bash scripts
+    \item Troubleshot and fixed existing Excel forecast templates, using pivot tables, VLOOKUP/XLOOKUP, dynamic array functions, and Power Query
     \item Designed and automated ETL workflows to process P\&L, SGM, GL, KPI, statistical, and budget data, improving accuracy and efficiency in cash flow, KPI, and milestone forecasting for financial reporting  
     \item Oversaw Workiva and land proforma integrations with Planning Analytics, including configuring APIs and table mappings
+    \item Developed proof of concept exporting Planning Analytics views to Power BI dashboards using Python (TM1py), REST API, and DAX
 \end{itemize}
 \vspace{1mm}
 
@@ -145,7 +146,7 @@ Financial systems analyst with a proven record in financial systems, business an
 \textbf{DocuNav Solutions} \hfill Frisco, TX \\
 \textit{Support Engineer} \hfill  \textit{Jun 2022 --- May 2023} 
 \begin{itemize}
-    \item Troubleshot, built, and tested Laserfiche automation Workflow, Quick Fields, and Form processes
+    \item Troubleshot, built, and tested Laserfiche automation Workflow, Quick Fields, and Form processes, while working with Texas ISD end users, administrators, and directors
     \item Maintained non-clustered SQL servers (stored procedures, task scheduler, SSL certs, TLS config)
     \item Configured folder-, document-, and user-level security using admin consoles and Active Directory (AD)
     \item Administered internal IT support (workstation setups; printer, laptop, and peripherals troubleshooting)
@@ -162,7 +163,7 @@ Financial systems analyst with a proven record in financial systems, business an
 \begin{itemize}
     \item Relevant coursework: Causal Inference, Economic Optimization and Machine Learning, Applied Econometrics I \& II, Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
     \begin{itemize}
-        \item R (tidyverse), Stata, Matlab, Python, SAS, \LaTeX
+        \item R (tidyverse), Stata, MATLAB, Python, SAS, \LaTeX
         \item OLS, IV, TWFE, DiD, 2SDiD, RDD, matching (propensity score, kernel, entropy, Mahalanobis distance,  KNN), synthetic control, event study, factor and cluster analysis, logit/probit, segmentation
     \end{itemize}
 \end{itemize}
