Update resume content: Enhance Salesforce data management description and clarify Laserfiche automation processes

--- a/cv/cv Finance/LimDon_resumeCV.tex
+++ b/cv/cv Finance/LimDon_resumeCV.tex
@@ -138,7 +138,7 @@ Financial systems analyst with a proven record in financial systems, business an
 \begin{itemize}
     \item Implemented and tested Salesforce development, UAT, and production environments, including training for 200+ end users (Salesforce CRM, Marketing Cloud, Sales Cloud, Data Loader) 
     \item Created Salesforce weekly, quarterly, and ad hoc reports, dashboards, email templates, workflows, cadences, and flows for sales and marketing end users and management
-    \item Cleaned, validated, and updated Salesforce data using a combination of SOQL, Postman, Data Loader, and Workbench
+    \item Cleaned, validated, deduplicated, and updated Salesforce data using a combination of regex, SOQL, Postman, Data Loader, and Workbench
     \item System admin for ERP and business applications (Constellation NEWSTAR Sales \& Enterprise, BuildPro, Calendly, DocuSign)
 \end{itemize}
 \vspace{1mm}
@@ -146,7 +146,7 @@ Financial systems analyst with a proven record in financial systems, business an
 \textbf{DocuNav Solutions} \hfill Frisco, TX \\
 \textit{Support Engineer} \hfill  \textit{Jun 2022 --- May 2023} 
 \begin{itemize}
-    \item Troubleshot, built, and tested Laserfiche automation Workflow, Quick Fields, and Form processes, while working with Texas ISD end users, administrators, and directors
+    \item Troubleshot, built, and tested Laserfiche automation Workflow, Quick Fields (OCR application for PDFs, images, or physical paper), and Form processes, while working with Texas ISD end users, administrators, and directors
     \item Maintained non-clustered SQL servers (stored procedures, task scheduler, SSL certs, TLS config)
     \item Configured folder-, document-, and user-level security using admin consoles and Active Directory (AD)
     \item Administered internal IT support (workstation setups; printer, laptop, and peripherals troubleshooting)
