Update resume content: Refine Excel template troubleshooting description to include nested functions

--- a/cv/cv Finance/LimDon_resumeCV.tex
+++ b/cv/cv Finance/LimDon_resumeCV.tex
@@ -127,7 +127,7 @@ Financial systems analyst with a proven record in financial systems, business an
     \item Converted the mortgage forecast model from Excel to Planning Analytics, increasing calculation speed, granularity from business unit to project level, and integrating personnel and headcount assumptions, worked closely with the company controller; assumptions included home closings, loans funded, application and contract rates, loan expenses and fees
     \item Designed dynamic, auto-refreshing dashboards and visualizations for financial managers, the CFO, and board members, replacing SSRS reports and significantly reducing board package preparation time
     \item Spearheaded newly implemented Git repository to manage and restore backups for processes and rules. In addition, prepared quarterly internal audit reports on change tracking and change management to support SOX and ITGC audit compliance using Git Bash scripts
-    \item Troubleshot and fixed existing Excel forecast templates, using pivot tables, VLOOKUP/XLOOKUP, dynamic array functions, and Power Query
+    \item Troubleshot and fixed existing Excel forecast templates, using pivot tables, VLOOKUP/XLOOKUP, dynamic array functions, nested functions, and Power Query
     \item Designed and automated ETL workflows to process P\&L, SGM, GL, KPI, statistical, and budget data, improving accuracy and efficiency in cash flow, KPI, and milestone forecasting for financial reporting  
     \item Oversaw Workiva and land proforma integrations with Planning Analytics, including configuring APIs and table mappings
     \item Developed proof of concept exporting Planning Analytics views to Power BI dashboards using Python (TM1py), REST API, and DAX
