Update resume content: Add change logs and documentation for Planning Analytics processes

--- a/cv/cv Finance/LimDon_resumeCV.tex
+++ b/cv/cv Finance/LimDon_resumeCV.tex
@@ -131,6 +131,7 @@ Financial systems analyst with a proven record in financial systems, business an
     \item Designed and automated ETL workflows to process P\&L, SGM, GL, KPI, statistical, and budget data, improving accuracy and efficiency in cash flow, KPI, and milestone forecasting for financial reporting  
     \item Oversaw Workiva and land proforma integrations with Planning Analytics, including configuring APIs and table mappings
     \item Developed proof of concept exporting Planning Analytics views to Power BI dashboards using Python (TM1py), REST API, and DAX
+    \item Maintained change logs and documentation for all Planning Analytics processes, rules, and applications
 \end{itemize}
 \vspace{1mm}
 
