--- a/cv/cv Finance/LimDon_resumeCV.tex
+++ b/cv/cv Finance/LimDon_resumeCV.tex
@@ -147,7 +147,7 @@ Financial systems analyst with a proven record in financial systems, business an
 \textbf{DocuNav Solutions} \hfill Frisco, TX \\
 \textit{Support Engineer} \hfill  \textit{Jun 2022 --- May 2023} 
 \begin{itemize}
-    \item Troubleshot, built, and tested Laserfiche automation Workflow, Quick Fields (OCR application for PDFs, images, or physical paper), and Form processes, while working with Texas ISD end users, administrators, and directors
+    \item Troubleshot, built, and tested Laserfiche automation Quick Fields, Workflow, and Form processes, which OCR, classify, extract, route, retain and maintain lifecycle management and security of documents for clients in legal, corporate, and independent school districts
     \item Maintained non-clustered SQL servers (stored procedures, task scheduler, SSL certs, TLS config)
     \item Configured folder-, document-, and user-level security using admin consoles and Active Directory (AD)
     \item Administered internal IT support (workstation setups; printer, laptop, and peripherals troubleshooting)
@@ -269,6 +269,7 @@ Financial systems analyst with a proven record in financial systems, business an
         \item Django, SQLite3, HTML5, CSS, JavaScript, Bash
     \end{itemize}
     \item Passed Probability exam \hfill Society of Actuaries, \textit{May 2023}
+    \item Laserfiche Gold \& Platinum \hfill Laserfiche, \textit{Oct 2022}
 \end{itemize}
 
 \vspace{1mm}
