Update LimDon's resume and Tableau portfolio
- Revised job descriptions in LimDon's resume to enhance clarity and detail, including specific technologies and processes used.
- Updated the Tableau portfolio page to reflect new dashboard titles and added additional dashboards for better organization and presentation.
- Ensured consistency in formatting and terminology throughout the resume and HTML files.

--- a/cv/cv Finance/LimDon_resumeCV.tex
+++ b/cv/cv Finance/LimDon_resumeCV.tex
@@ -147,7 +147,7 @@ Financial systems analyst with a proven record in financial systems, business an
 \textbf{DocuNav Solutions} \hfill Frisco, TX \\
 \textit{Support Engineer} \hfill  \textit{Jun 2022 --- May 2023} 
 \begin{itemize}
-    \item Troubleshot, built, and tested Laserfiche automation Quick Fields, Workflow, and Form processes, which OCR, classify, extract, route, retain and maintain lifecycle management and security of documents for clients in legal, corporate, and independent school districts
+    \item Troubleshot, built, and tested Laserfiche application suite for document lifecycle management, including Quick Fields, Workflow, and Form processes, which OCR, extract, route, classify, retain, and secure documents for clients in legal, corporate, and independent school districts
     \item Maintained non-clustered SQL servers (stored procedures, task scheduler, SSL certs, TLS config)
     \item Configured folder-, document-, and user-level security using admin consoles and Active Directory (AD)
     \item Administered internal IT support (workstation setups; printer, laptop, and peripherals troubleshooting)
