--- a/cv/cv Finance/LimDon_resumeCV.tex
+++ b/cv/cv Finance/LimDon_resumeCV.tex
@@ -14,8 +14,8 @@
 \usepackage[a4paper,
     top=0.75in,
     bottom=0.75in,
-    left=0.75in,
-    right=0.75in,
+    left=0.65in,
+    right=0.65in,
     headheight=14pt,
     headsep=0.2in,
     footskip=0.4in
@@ -23,16 +23,11 @@
 
 \setlength{\parindent}{0pt}
 
-% First bullet point
 \renewcommand{\labelitemi}{\textopenbullet}
-
-% Second bullet point
 \renewcommand{\labelitemii}{\textbullet}
 
 \usepackage{marvosym}
-% \usepackage{fontawesome}
 \usepackage{twemojis}
-
 \usepackage[explicit]{titlesec}
 \usepackage{xhfill}
 
@@ -47,71 +42,65 @@
 \leavevmode\leaders\hrule height 0.3pt\hfill\kern0pt }
 
 \newcommand{\area} [2] {
-    \vspace*{-9pt}
-    \begin{verse}
-        \textbf{#1}   #2
-    \end{verse}
+\vspace*{-9pt}
+\begin{verse}
+\textbf{#1}   #2
+\end{verse}
 }
 
 \newcommand{\lineunder} {
-    \vspace*{-8pt} \\
-    \hspace*{-18pt} \hrulefill \\
+\vspace*{-8pt} \\
+\hspace*{-18pt} \hrulefill \\
 }
 
 \newcommand{\header} [1] {
-    \vspace{1mm}
-    {\textsc{\textbf{\Large{\xrfill[0.5ex]{0.5pt}~#1~\xrfill[0.5ex]{0.5pt}}}}} % center and underline
+\vspace{1mm}
+    {\textsc{\textbf{\Large{\xrfill[0.5ex]{0.5pt}~#1~\xrfill[0.5ex]{0.5pt}}}}}
 }
-
-% \newcommand{\header} [1] {
-%     \vspace{1mm}
-%     {\textsc{\textbf{\Large{#1\xrfill[0.0ex]{0.5pt}}}}}
-% }
 
 \newcommand{\employer} [3] {
     { \textsc{#1} (#2)\\ \underline{\textsc{\textit{#3}}}\\  }
 }
 
 \newcommand{\contact} [3] {
-    \vspace*{-10pt}
-    \begin{center}
+\vspace*{-10pt}
+\begin{center}
         {\Huge \scshape {#1}}\\
         #2 \\ #3
-    \end{center}
-    \vspace*{-8pt}
+\end{center}
+\vspace*{-8pt}
 }
 
 \newenvironment{achievements}{
-    \begin{list}
+\begin{list}
         {$\bullet$}{\topsep 0pt \itemsep -2pt}}{\vspace*{4pt}
-    \end{list}
+\end{list}
 }
 
 \newcommand{\schoolwithcourses} [4] {
-    \textsc{#1} #2 $\bullet$ #3\\
+\textsc{#1} #2 $\bullet$ #3\\
     #4 \\
-    \vspace*{5pt}
+\vspace*{5pt}
 }
 
 \newcommand{\school} [4] {
-    \textsc{#1} #2 $\bullet$ #3\\
+\textsc{#1} #2 $\bullet$ #3\\
     #4 \\
 }
-% END RESUME DEFINITIONS %%%%%%%%%%%%%%%%%%%%%%%
+
 \setlist[itemize]{noitemsep, nolistsep, leftmargin=2.5em}
 \begin{document}
 \vspace*{-0.45in}
-\fontsize{10.5}{11.5}\selectfont
+\fontsize{10.0}{11.5}\selectfont
 
-%==== Profile ====%
-% \vspace*{0.5mm}
 \begin{raggedright}
-    {\Huge\textbf\textsc{{{Don Lim}}}} \\
-    \href{mailto:lim.don93@gmail.com}{lim.don93@gmail.com} | (806) 317-7937 | \href{https://donlim93.github.io/}{https://donlim93.github.io} | \href{https://www.linkedin.com/in/lim-don/}{https://www.linkedin.com/in/lim-don} \\ \vspace{2mm}
+    {\Huge\textbf\textsc{{{Don Lim}}}} \hfill
+\href{mailto:lim.don93@gmail.com}{lim.don93@gmail.com} | (806) 317-7937 | \href{https://donlim93.github.io/}{https://donlim93.github.io} | \href{https://www.linkedin.com/in/lim-don/}{https://www.linkedin.com/in/lim-don} \\ \vspace{2mm}
 \end{raggedright}
-%==== Experience ====%
 
-Financial systems analyst with a proven record in financial systems, business analytics, and process automation. Experienced in IBM TM1/Planning Analytics, Salesforce CRM, SQL, and Python. Skilled at improving forecasting accuracy, financial reporting, and cross-departmental workflows through data-driven solutions. Transitioned from IT to finance to bridge technology and business operations. Pursued a Ph.D. at Texas Tech University before earning a terminal master’s degree, uniting academic research and technical proficiency in econometrics and optimization 
+\vspace{1mm}
+
+Financial systems analyst specializing in financial systems, business analytics, and process automation. Experienced in IBM TM1/Planning Analytics, Salesforce CRM, SQL, and Python. Proven ability to enhance forecasting accuracy, streamline reporting, and optimize cross-department workflows. Transitioned from IT to finance to bridge business and technology. Earned a terminal master’s degree at Texas Tech University, integrating econometrics and optimization to drive data-driven decision-making.
 
 \vspace{1mm}
 \header{Work Experience} 
@@ -119,164 +108,113 @@ Financial systems analyst with a proven record in financial systems, business an
 \vspace{1mm}
 \textbf{Green Brick Partners, Inc.} \hfill Plano, TX \\
 \textit{Senior Financial Systems Analyst, Finance and Operations} \hfill \textit{Nov 2024 --- Oct 2025} 
-% \hfill \textit{(Unofficially assisted starting Oct 2023)}
 \begin{itemize}
-    \item Developed IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis, integrating first- and third-party tools (PAW, Excel, FileZilla, Cognos Command Center, Arc, Pulse, TM1py, Git) to enable daily forecasting cycles in place of biannual forecasts  
-    \item Programmatically built and maintained Planning Analytics OLAP database with 42 cubes, 88 dimensions, attributes, subsets, control objects, security, applications, and views across IBM TM1/Planning Analytics development, UAT, and production environments using a combination of MDX, SQL (joins, CTEs, cross applies), TurboIntegrator (TI), and TM1 rules  
-    \item Developed a land cash flow module incorporating uniform, annual, and quarterly cost-to-complete spreads, retainage, and payout schedules—reducing forecast preparation time by 50\%
-    \item Converted the mortgage forecast model from Excel to Planning Analytics, increasing calculation speed, granularity from business unit to project level, and integrating personnel and headcount assumptions, worked closely with the company controller; assumptions included home closings, loans funded, application and contract rates, loan expenses and fees
-    \item Designed dynamic, auto-refreshing dashboards and visualizations for financial managers, the CFO, and board members, replacing SSRS reports and significantly reducing board package preparation time
-    \item Spearheaded newly implemented Git repository to manage and restore backups for processes and rules. In addition, prepared quarterly internal audit reports on change tracking and change management to support SOX and ITGC audit compliance using Git Bash scripts
-    \item Troubleshot and fixed existing Excel forecast templates, using pivot tables, VLOOKUP/XLOOKUP, dynamic array functions, nested functions, and Power Query
-    \item Designed and automated ETL workflows to process P\&L, SGM, GL, KPI, statistical, and budget data, improving accuracy and efficiency in cash flow, KPI, and milestone forecasting for financial reporting  
-    \item Oversaw Workiva and land proforma integrations with Planning Analytics, including configuring APIs and table mappings
-    \item Developed proof of concept exporting Planning Analytics views to Power BI dashboards using Python (TM1py), REST API, and DAX
-    \item Maintained change logs and documentation for all Planning Analytics processes, rules, and applications
+\item Built and automated IBM TM1/Planning Analytics TI processes and business rules, integrating first- and third-party tools (PAW, Excel, FileZilla, Cognos Command Center, Arc, Pulse, TM1py, Git), enabling daily forecasting instead of biannual cycles.
+\item Programmatically maintained Planning Analytics OLAP database with 42 cubes, 88 dimensions, and supporting control objects, using MDX, SQL, TurboIntegrator (TI), and TM1 rules across dev, UAT, and production.
+\item Developed a land cash flow module with cost-to-complete spreads and payout schedules, cutting forecast preparation time by 50\%.
+\item Converted mortgage forecasting from Excel to Planning Analytics, improving calculation speed, granularity, and data integration; collaborated with the Controller to enhance accuracy of loan and headcount assumptions.
+\item Designed automated, interactive dashboards for financial managers and executives, replacing SSRS reports and reducing board package prep time by 75\%.
+\item Implemented and managed Git repository for TM1 processes, maintaining version control and SOX/ITGC compliance through automated audit scripts.
+\item Optimized Excel-based forecasting templates using Power Query, dynamic arrays, and nested functions to resolve calculation and refresh errors.
+\item Automated ETL pipelines for P\&L, SGM, GL, KPI, and budget data, improving data accuracy and reducing manual processing.
+\item Oversaw Workiva and Land Proforma integrations with TM1, configuring APIs and database mappings.
+\item Built proof of concept for TM1-to-Power BI export via Python (TM1py), REST API, and DAX for dynamic visualizations.
+\item Documented all Planning Analytics processes, rules, and applications to support governance and team onboarding.
 \end{itemize}
-\vspace{1mm}
 
+\vspace{1mm}
 \textit{Sales and Marketing Analyst, IT} \hfill  \textit{May 2023 --- Nov 2024} 
 \begin{itemize}
-    \item Implemented and tested Salesforce development, UAT, and production environments, including training for 200+ end users (Salesforce CRM, Marketing Cloud, Sales Cloud, Data Loader) 
-    \item Created Salesforce weekly, quarterly, and ad hoc reports, dashboards, email templates, workflows, cadences, and flows for sales and marketing end users and management
-    \item Cleaned, validated, deduplicated, and updated Salesforce data using a combination of regex, SOQL, Postman, Data Loader, and Workbench
-    \item System admin for ERP and business applications (Constellation NEWSTAR Sales \& Enterprise, BuildPro, Calendly, DocuSign)
+\item Administered Salesforce CRM, Marketing Cloud, and Sales Cloud environments; implemented and tested enhancements across dev, UAT, and production.
+\item Created Salesforce dashboards, reports, workflows, and automated campaigns, improving visibility for 200+ end users.
+\item Cleaned, validated, and deduplicated Salesforce data using regex, SOQL, and Data Loader, increasing data accuracy.
+\item Served as system administrator for ERP and business tools (Constellation NEWSTAR, BuildPro, Calendly, DocuSign).
 \end{itemize}
-\vspace{1mm}
 
+\vspace{1mm}
 \textbf{DocuNav Solutions} \hfill Frisco, TX \\
 \textit{Support Engineer} \hfill  \textit{Jun 2022 --- May 2023} 
 \begin{itemize}
-    \item Troubleshot, built, and tested Laserfiche application suite for document lifecycle management, including Quick Fields, Workflow, and Form processes, which OCR, extract, route, classify, retain, and secure documents for clients in legal, corporate, and independent school districts
-    \item Maintained non-clustered SQL servers (stored procedures, task scheduler, SSL certs, TLS config)
-    \item Configured folder-, document-, and user-level security using admin consoles and Active Directory (AD)
-    \item Administered internal IT support (workstation setups; printer, laptop, and peripherals troubleshooting)
+\item Built, tested, and deployed Laserfiche document management solutions (Quick Fields, Workflow, Forms) that automated document OCR, extraction, routing, and classification for corporate, legal, and school district clients.
+\item Maintained non-clustered SQL servers (stored procedures, task scheduling, SSL/TLS configuration).
+\item Managed document- and user-level security via Active Directory and admin consoles.
+\item Provided IT support for workstations, laptops, and peripheral devices.
 \end{itemize}    
+
 \vspace{1mm}
-
-%==== Education ====%
-
 \header{Education} 
 
 \vspace{1mm}
-\textbf{Texas Tech University, Department of Agricultural and Applied Economics}\hfill Lubbock, Texas\\
-\textit{Master of Science in Agricultural and Applied Economics, GPA: 3.6/4} \hfill  \textit{May 2022}
+\textbf{Texas Tech University, Department of Agricultural and Applied Economics}\hfill Lubbock, TX\\
+\textit{Master of Science in Agricultural and Applied Economics, GPA: 3.6/4.0} \hfill  \textit{May 2022}
 \begin{itemize}
-    \item Relevant coursework: Causal Inference, Economic Optimization and Machine Learning, Applied Econometrics I \& II, Advanced Production Economics, Mathematical Economics, Advanced Market Analysis, Applied Macroeconomics, Applied Microeconomics I \& II
-    \begin{itemize}
-        \item R (tidyverse), Stata, MATLAB, Python, SAS, \LaTeX
-        \item OLS, IV, TWFE, DiD, 2SDiD, RDD, matching (propensity score, kernel, entropy, Mahalanobis distance,  KNN), synthetic control, event study, factor and cluster analysis, logit/probit, segmentation
-    \end{itemize}
+\item Relevant coursework: Causal Inference, Optimization, Econometrics I \& II, Production Economics, Machine Learning, Macro/Microeconomics.
+\item Tools and methods: R (tidyverse), Stata, MATLAB, Python, SAS, \LaTeX; econometric methods including OLS, IV, DiD, RDD, matching, and clustering.
 \end{itemize}
-\vspace{1mm}
 
+\vspace{1mm}
 \textbf{CEVRO Institute, School of Political Studies}\hfill Prague, Czech Republic\\
-\textit{Master of Arts in Political Science, Philosophy, and Economics (PPE)} \hfill  \textit{Jun 2019}
-\begin{itemize}
-    \item \textbf{Scholarship:} Full Tuition for Excellence
-\end{itemize}
-\vspace{1mm}
+\textit{M.A. in Political Science, Philosophy, and Economics (PPE)} \hfill  \textit{Jun 2019}\\
+\textbf{Scholarship:} Full Tuition for Academic Excellence
 
+\vspace{1mm}
 \textbf{University of Michigan, College of Literature, Science, and the Arts} \hfill Ann Arbor, MI\\
 \textit{Bachelor of Arts in General Studies (Political Science, Philosophy, and History)} \hfill  \textit{Apr 2016}
 
 \vspace{1mm}
-
 \header{Research Experience} 
 
 \vspace{1mm}
-% % \textbf{Various research poisitions}
 \textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
 \textit{Economic Research Assistant} \hfill  \textit{Aug 2020 --- May 2022} 
 \begin{itemize}
-    \item Investigated relevant literature for, revised, and edited book chapters and journal articles
+\item Conducted economic literature reviews and statistical analyses for academic publications and book chapters.
 \end{itemize}
-\vspace{1mm}
 
+\vspace{1mm}
 \textbf{American Institute for Economic Research} \hfill Great Barrington, MA\\
-\textit{EC Harwood Visiting Research Fellow} \hfill  \textit{Dec 2018 --- May 2019}
-\vspace{1mm}
+\textit{E.C. Harwood Visiting Research Fellow} \hfill  \textit{Dec 2018 --- May 2019}
 
+\vspace{1mm}
 \textbf{Free Market Institute, Texas Tech University} \hfill Lubbock, TX\\
 \textit{Visiting Research Scholar} \hfill  \textit{Sep 2018 --- Dec 2018}
 \begin{itemize}
-    \item Researched and presented master's thesis: economic analysis of open-source communities
+\item Researched and presented master’s thesis on the economic organization of open-source communities.
 \end{itemize}
-\vspace{1mm}
 
+\vspace{1mm}
 \textbf{Commonwealth Foundation} \hfill King of Prussia, PA\\
 \textit{Research Fellow} \hfill  \textit{Jan 2017 --- May 2017}
 \begin{itemize}
-    \item Created graphical visualizations of Pennsylvania's yearly expenditures and tax policies
-    \item Wrote and edited two weekly publications regarding Pennsylvania's budget and education policy
-    \item Responded to daily email inquiries regarding subsidies, right-to-work laws, and the state budget
+\item Designed visual reports of Pennsylvania’s tax and expenditure data to support policy publications.
+\item Authored and edited weekly newsletters on state budget and education reform.
+\item Responded to legislative and public inquiries on fiscal and labor policy.
 \end{itemize}
-\vspace{1mm}
 
+\vspace{1mm}
 \textbf{Cato Institute} \hfill Washington, DC\\
-\textit{Intern Researcher at the Center for Educational Freedom} \hfill \textit{Sep 2016 --- Dec 2016}
+\textit{Research Intern, Center for Educational Freedom} \hfill \textit{Sep 2016 --- Dec 2016}
 \begin{itemize}
-    \item Compiled and examined TIMSS and PISA datasets related to national education policy
-    \item Summarized Capitol Hill proceedings regarding foreign affairs, trade, monetary, and education
-    \item Produced over 200 Twitter/X posts on @HumanProgress
+\item Analyzed international education datasets (TIMSS, PISA) to evaluate policy impacts.
+\item Summarized congressional proceedings on education, trade, and monetary policy.
+\item Produced 200+ social media data visualizations for @HumanProgress.
 \end{itemize}
+
 \vspace{1mm}
-
-% \textbf{Free Market Institute, Texas Tech University}, Economic Research Assistant \hfill \textit{Aug 2020 --- May 2022} \\
-% % \end{itemize}
-
-% \textbf{American Institute for Economic Research}, EC Harwood Visiting Research Fellow \hfill \textit{Dec 2018 --- May 2019}\\
-
-% \textbf{Free Market Institute, Texas Tech University} Visiting Research Scholar \hfill  \textit{Sep 2018 --- Dec 2018}\\
-% % \begin{itemize}
-% %     \item Researched and presented master's thesis: economic analysis of open-source communities
-% % \end{itemize}
-
-% \textbf{Commonwealth Foundation}, Research Fellow \hfill \textit{Jan 2017 --- May 2017}\\
-% % \begin{itemize}
-% %     \item Created graphical visualizations of Pennsylvania's yearly expenditures and tax policies
-% %     \item Wrote and edited two weekly publications regarding Pennsylvania's budget and education policy
-% %     \item Responded to daily email inquiries regarding subsidies, right-to-work laws, and the state budget
-% % \end{itemize}
-
-% \textbf{Cato Institute}, Intern Researcher \hfill \textit{Sep 2016 --- Dec 2016}\\
-% \begin{itemize}
-%     \item Compiled and examined TIMSS and PISA datasets related to national education policy
-%     \item Summarized Capitol Hill proceedings regarding foreign affairs, trade, monetary, and education
-%     \item Produced over 200 Twitter/X posts on @HumanProgress
-% \end{itemize}
-\vspace{1mm}
-%==== Certificates ====%
-
 \header{Certifications and Exams} 
 \vspace{1mm}
 
 \begin{itemize}
-    \item PostgreSQL for Everybody Specialization \hfill Coursera, \textit{May 2024}
-    \begin{itemize}
-        \item PostgreSQL, DBeaver, NoSQL, Elasticsearch
-    \end{itemize}
-    \item Web Applications for Everybody Specialization \hfill Coursera, \textit{Oct 2023}
-    \begin{itemize}
-        \item MySQL, PHP, JavaScript, jQuery, JSON, XAMPP
-    \end{itemize}
-    \item Applied Data Science with Python Specialization \hfill Coursera, \textit{Aug 2023}
-    \begin{itemize}
-        \item Python (regex, NumPy, Pandas, scikit-learn, Matplotlib, Seaborn, NLTK, NetworkX), gradient descent, random forest, decision tree, SVC, linear and logistic regression, Lasso, KNN, Na\"{i}ve Bayes, clustering
-    \end{itemize}
-    \item Django for Everybody Specialization \hfill Coursera, \textit{Jul 2023}
-    \begin{itemize}
-        \item Django, SQLite3, HTML5, CSS, JavaScript, Bash
-    \end{itemize}
-    \item Passed Probability exam \hfill Society of Actuaries, \textit{May 2023}
-    \item Laserfiche Gold \& Platinum \hfill Laserfiche, \textit{Oct 2022}
+\item PostgreSQL for Everybody Specialization \hfill Coursera, \textit{May 2024}\\
+\textit{Skills:} PostgreSQL, DBeaver, NoSQL, Elasticsearch
+\item Web Applications for Everybody Specialization \hfill Coursera, \textit{Oct 2023}\\
+\textit{Skills:} MySQL, PHP, JavaScript, jQuery, JSON, XAMPP
+\item Applied Data Science with Python Specialization \hfill Coursera, \textit{Aug 2023}\\
+\textit{Skills:} Python (regex, Pandas, scikit-learn), ML algorithms (random forest, SVC, logistic regression, KNN, Na\"{i}ve Bayes, clustering)
+\item Django for Everybody Specialization \hfill Coursera, \textit{Jul 2023}\\
+\textit{Skills:} Django, SQLite, HTML5, CSS, JavaScript, Bash
+\item Probability Exam (SOA) \hfill Society of Actuaries, \textit{May 2023}
+\item Laserfiche Gold \& Platinum Certifications \hfill Laserfiche, \textit{Oct 2022}
 \end{itemize}
-
-\vspace{1mm}
-
-%==== Skills ====%
-
-% \header{Skills} \\
-% \vspace{1mm}
 
 \end{document}
