Refactor resume content and improve clarity in financial systems analyst section; updated terminology from Planning Analytics to TM1, enhanced descriptions of key achievements, and optimized bullet points for better readability.

--- a/cv/cv Finance/LimDon_resumeCV.tex
+++ b/cv/cv Finance/LimDon_resumeCV.tex
@@ -122,16 +122,16 @@ Financial systems analyst with a proven record in financial systems, business an
 % \hfill \textit{(Unofficially assisted starting Oct 2023)}
 \begin{itemize}
     \item Developed IBM TM1/Planning Analytics TI processes and business rules for financial planning and analysis, integrating first- and third-party tools (PAW, Excel, FileZilla, Cognos Command Center, Arc, Pulse, TM1py, Git) to enable daily forecasting cycles in place of biannual forecasts  
-    \item Programmatically built and maintained Planning Analytics OLAP database with 42 cubes, 88 dimensions, attributes, subsets, control objects, security, applications, and views across IBM TM1/Planning Analytics development, UAT, and production environments using a combination of MDX, SQL (joins, CTEs, cross applies), TurboIntegrator (TI), and TM1 rules  
-    \item Developed a land cash flow module incorporating uniform, annual, and quarterly cost-to-complete spreads, retainage, and payout schedules—reducing forecast preparation time by 50\%
-    \item Converted the mortgage forecast model from Excel to Planning Analytics, increasing calculation speed, granularity from business unit to project level, and integrating personnel and headcount assumptions, worked closely with the company controller; assumptions included home closings, loans funded, application and contract rates, loan expenses and fees
-    \item Designed dynamic, auto-refreshing dashboards and visualizations for financial managers, the CFO, and board members, replacing SSRS reports and significantly reducing board package preparation time
+    \item Programmatically built and maintained Planning Analytics OLAP database with 42 cubes, 88 dimensions, attributes, subsets, control objects, security, applications, and views across TM1 development, UAT, and production environments using a combination of MDX, SQL (joins, CTEs, cross applies), TurboIntegrator (TI), and TM1 rules  
+    \item Worked closely with VP of Asset Management and developed a land cash flow module incorporating uniform, annual, and quarterly cost-to-complete spreads, retainage, and payout schedules—reducing forecast preparation time by 50\%
+    \item Converted the mortgage forecast model from Excel to TM1, increasing calculation speed, granularity from business unit to project level, and integrating personnel and headcount assumptions, worked closely with the company controller; assumptions included home closings, loans funded, application and contract rates, loan expenses and fees
+    \item Designed dynamic, auto-refreshing dashboards and visualizations for financial managers, the CFO, and board members, replacing SSRS reports and significantly reducing board package preparation time by 75\%
     \item Spearheaded newly implemented Git repository to manage and restore backups for processes and rules. In addition, prepared quarterly internal audit reports on change tracking and change management to support SOX and ITGC audit compliance using Git Bash scripts
     \item Troubleshot and fixed existing Excel forecast templates, using pivot tables, VLOOKUP/XLOOKUP, dynamic array functions, nested functions, and Power Query
     \item Designed and automated ETL workflows to process P\&L, SGM, GL, KPI, statistical, and budget data, improving accuracy and efficiency in cash flow, KPI, and milestone forecasting for financial reporting  
     \item Oversaw Workiva and land proforma integrations with Planning Analytics, including configuring APIs and table mappings
-    \item Developed proof of concept exporting Planning Analytics views to Power BI dashboards using Python (TM1py), REST API, and DAX
-    \item Maintained change logs and documentation for all Planning Analytics processes, rules, and applications
+    \item Developed proof of concept exporting TM1 views to Power BI dashboards using Python (TM1py), REST API, and DAX
+    \item Maintained change logs and documentation for all TM1 processes, rules, and applications
 \end{itemize}
 \vspace{1mm}
 
